==> cedar-renjun/Arduino_WiFi_Shield/Src/WiFi_Lib/spi_drv.c <==
#include "spi_drv.h"
#include "wifi_spi.h"
#define DELAY_TRANSFER() DelayUs(15)

void SpiDrv_Init(void)
{
    unsigned long ulTemp=0;
    (*((volatile unsigned long *)(0x40048100))) = 0x00;
    
    //This code is must in RAM debug.
    //common_startup();
    //TestIOInit();    
    
    //Init Spi
    SysCtlPeripheralEnable(SYSCTL_PERIPH_SPI0);
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);
           
    xSPinTypeSPI(SPI0CLK,  PD1);
    xSPinTypeSPI(SPI0CS,   PD0);
    xSPinTypeSPI(SPI0MOSI, PD2);
    xSPinTypeSPI(SPI0MISO, PD3);  
        
    ulTemp = xSPI_MOTO_FORMAT_MODE_0 | xSPI_MODE_MASTER | xSPI_MSB_FIRST;
        
    xSPIConfigSet(xSPI0_BASE, 4000000, ulTemp);    
    xSPIEnable(xSPI0_BASE);

    //HandPin Init
    xSysCtlPeripheralEnable(xSYSCTL_PERIPH_GPIOC);
    xGPIOSPinTypeGPIOInput(PC9);
    
    DelayMs(500);    

#if 0    
    //LED Initial
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOB);
    xGPIOSPinTypeGPIOOutput(PB18);
    while(1)
    {
        printf("printf\r\n");
 
        SysCtlDelay(0x3FFFFF);
        xGPIOSPinWrite(PB18, 1);
        
        SysCtlDelay(0x3FFFFF);
        xGPIOSPinWrite(PB18, 0);
    }
#endif 
    
    printf("\r\nSystem initialize ok!\r\n");     
#if 0
    //used for measure Transfer time
    while(1)
    {
        DelayUs(40);
        SpiDrv_SendBuffer(port, 2, 0);
    }
#endif

#if 0    
    //Test Pin
    SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);
    xGPIOSPinTypeGPIOOutput(PD5);
    while(1)
    {        
        DelayUs(5); 
        xGPIOSPinWrite(PD5, 1);        
        DelayUs(5); 
        xGPIOSPinWrite(PD5, 0);
    }
#endif     
}

void SpiDrv_Stop(void)
{
    //SPI_Cmd(SPI1, DISABLE);
	xSPIDisable(xSPI0_BASE);
}

uint8_t SpiDrv_Transfer(uint8_t Data)
{
        
    uint32_t Recv = 0;

    // Write data and read back
    Recv = xSPISingleDataReadWrite(xSPI0_BASE, Data);

    //This delay is must
    //Note By CooCox Cedar
    DelayUs(5);
	return (Recv);
}

void SpiDrv_WaitForSlaveReady(void)
{
    //Wait WiFi SPI idle.
    //while(GPIO_ReadInputDataBit(GPIOA, GPIO_Pin_3) == Bit_SET);
    while(xGPIOSPinRead(PC9) != 0);
}
